syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/common/pb/gen/ukama";

package ukama.common.v1;

enum NodeConnectivity {
    Undefined = 0;
    Online = 1;
    Offline = 2;
}

enum NodeState {
    Unknown =  0;
    Onboarded  = 1;
    Configured = 2;
    operational     = 3;
    faulty = 4;
}

